--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,6 @@ jobs:
       run: |
         echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "ntstlk" --password-stdin
         docker build . --file Dockerfile --tag ntstlk/laba55:latest
-        docker push altfac/laba55:latest
+        docker push ntstlk/laba55:latest
  
  
